# slot

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: slot-config.cmake.in
example/: CMakeLists.txt  cereal_like.cpp
include/slot/: slot.hpp
test/: CMakeLists.txt  binding.cpp  direct_or_temp.cpp  writable.cpp
